fix boxes on tablets

--- a/assets/less/base/ui/box.less
+++ b/assets/less/base/ui/box.less
@@ -49,7 +49,7 @@
 		}
 		@media only screen 
 		and (min-width : 319px) 
-		and (max-width : 767px) {
+		and (max-width : 1023px) {
 			margin-top: -30px;
 		}	
 	}
